[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cavern"]

[project]
name = "cavern"
version = "0.1.0"
description = "A metadata-hiding credential vault built on GPG and authenticated encryption."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cavern" }]
keywords = ["password-manager", "gpg", "cli", "credentials", "vault"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=42",
    "pyotp>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
cavern = "cavern.cli:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "RET", "SIM"]
# S603/S607: subprocess use is intentional and arg-list, never shell=True.
# S105/S106: this is a credential vault — variable names containing
# "password", "key", "secret" are not hardcoded credentials.
ignore = ["S603", "S607", "S105", "S106"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pyotp"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
